ops/k8s/deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-tracker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-tracker
  template:
    metadata:
      labels:
        app: task-tracker
    spec:
      containers:
      - name: task-tracker
        image: cyrilbaah/task-tracker
        resources:
          limits:
            memory: "1.5Gi"
            cpu: "1"
          requests:
            memory: "600Mi"
            cpu: "750m"
        ports:
          - containerPort: 3000
