ops/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: task-tracker
spec:
  type: LoadBalancer
  selector:
    app: task-tracker
  ports:
  - port: 3000
    targetPort: 3000
