ops/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-ingress
spec:
  rules:
    - host: task.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: task-tracker
                port:
                  number: 3000
